--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -343,7 +343,11 @@
     \noindent\LARGE
     Presentado por \@author{}\\ 
     en Universidad de Burgos --- \@date{}\\
-    Tutor: \@tutor{}\\
+    \begin{tabbing}
+    	Tutores: \= Dr. César Ignacio García Osorio \kill
+    	Tutores: \> Dr. César Ignacio García Osorio \\
+    	\> Dr. José Francisco Diez Pastor
+    \end{tabbing}
   }%
   \end{center}%
   \null
@@ -355,7 +359,7 @@
 % Datos de portada
 \title{Flutter Games\\Documentación Técnica}
 \author{Samuel Casal Cantero}
-\tutor{José Francisco Diez Pastor y Cesár García Osorio}
+\tutor{José Francisco Diez Pastor y César García Osorio}
 \date{\today}
 
 \begin{document}
