--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -8,7 +8,7 @@
 
 @misc{ wiki:framework,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "Framework",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/Framework},
 	note = "[]"
@@ -16,15 +16,15 @@
 
 @misc{ foro:encuesta,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "Encuesta Forocoches",
 	year = "2020",
 	url = {https://www.forocoches.com/foro/showthread.php?t=7255092&highlight=flutter},
 	note = "[]"
 }
 
 @misc{ wiki:ionnic,
-	author = "Forocoches",
-	title = "Desarrollo apps moviles",
+	author = "Wikipedia",
+	title = "Ionic",
 	year = "2020",
 	url = {https://en.wikipedia.org/wiki/Ionic_(mobile_app_framework)},
 	note = "[]"
@@ -32,7 +32,7 @@
 
 @misc{ wiki:react,
 author = "Wikipedia",
-title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+title = "React",
 year = "2020",
 url = {https://en.wikipedia.org/wiki/React_Native},
 note = "[]"
@@ -40,7 +40,7 @@ note = "[]"
 
 @misc{ wiki:xamarin,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "Xamarin",
 	year = "2020",
 	url = {https://en.wikipedia.org/wiki/Xamarin},
 	note = "[]"
@@ -48,7 +48,7 @@ note = "[]"
 
 @misc{ wiki:flutter,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "Flutter",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/Dart},
 	note = "[]"
@@ -56,7 +56,7 @@ note = "[]"
 
 @misc{ wiki:firebase,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "Firebase",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/Firebase},
 	note = "[]"
@@ -64,7 +64,7 @@ note = "[]"
 
 @misc{ wiki:marketOS,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "OS Market Share",
 	year = "2020",
 	url = {https://gs.statcounter.com/os-market-share/desktop-mobile/worldwide/#monthly-200901-202006},
 	note = "[]"
@@ -72,7 +72,7 @@ note = "[]"
 
 @misc{ google:playservices,
 	author = "Google",
-	title = "",
+	title = "Google play services",
 	year = "2020",
 	url = {https://play.google.com/store/apps/details?id=com.google.android.gms&hl=es_419},
 	note = "[]"
@@ -80,7 +80,7 @@ note = "[]"
 
 @misc{ google:firebase,
 	author = "Google",
-	title = "",
+	title = "Firebase Console Google",
 	year = "2020",
 	url = {https://firebase.google.com/docs/database?hl=es},
 	note = "[]"
@@ -88,11 +88,28 @@ note = "[]"
 
 @misc{ google:material,
 	author = "Google",
-	title = "",
+	title = "Google Material Design",
 	year = "2020",
 	url = {https://material.io/design},
 	note = "[]"
 }
+
+@misc{ google:apiflutter,
+	author = "Google",
+	title = "API flutter",
+	year = "2020",
+	url = {https://api.flutter.dev/},
+	note = "[]"
+}
+
+@misc{ google:pubdev,
+	author = "Google",
+	title = "Pub dev packages",
+	year = "2020",
+	url = {https://pub.dev/},
+	note = "[]"
+}
+
 
 
 
