--- a/docs/latex/tex/6_Trabajos_relacionados.tex
+++ b/docs/latex/tex/6_Trabajos_relacionados.tex
@@ -1,6 +1,6 @@
 \capitulo{6}{Trabajos relacionados}
 
-Esta herramienta es muy novedosa, Google la presentó en el 2018, por lo que lleva únicamente dos años en el mercado.
+Flutter es un \emph{framework} muy novedoso, Google la presentó en el 2018, por lo que lleva únicamente dos años en el mercado.
 
 La documentación es escasa y mayoritariamente escrita en inglés. Cada vez hay más información, cursos, y foros al respecto. Entiendo que esto se debe a que Google está apostando fuerte por este lenguaje, ya que ellos son sus creadores.
 
@@ -8,8 +8,8 @@ No me he basado en trabajos anteriores, pero si que he buscado mucha informació
 
 
 \begin{itemize}
-	\item Flutter sdk, donde está toda la documentación oficial~\href{https://flutter.dev/}{web}.
-	\item Canal oficial de  ~\href{https://www.youtube.com/watch?v=ukLBCRBlIkk&list=PLjxrf2q8roU1kMpfyJ4EY0pID2oRHtvGm}{flutter} en youtube, donde se comenta el Widget de la semana.
-	\item Todo lo referente a~\href{https://api.dart.dev/stable/2.8.4/index.html}{dart}.
-	\item Canal de youtube sobre ~\href{https://www.youtube.com/channel/UCP4bf6IHJJQehibu6ai__cg}{firebase}.
+	\item Flutter SDK, donde está toda la documentación oficial~\href{https://flutter.dev/}{web}.
+	\item Canal oficial de  ~\href{https://www.youtube.com/watch?v=ukLBCRBlIkk&list=PLjxrf2q8roU1kMpfyJ4EY0pID2oRHtvGm}{flutter} en Youtube, donde se comenta el Widget de la semana.
+	\item Todo lo referente a~\href{https://api.dart.dev/stable/2.8.4/index.html}{Dart}.
+	\item Canal de Youtube sobre ~\href{https://www.youtube.com/channel/UCP4bf6IHJJQehibu6ai__cg}{Firebase}.
 \end{itemize}
