--- a/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -23,7 +23,7 @@ En este apéndice se expone las conclusiones una vez realizado el proyecto final
 	
 	Es de gran importancia ajustarse lo máximo posible a la realidad y no pecar de pesimista como es mi caso, ya que planifico más horas de las que luego realmente se invierten.
 	
-	\item Me a llevado un gran proceso de investigación y aprendizaje, para poder añadir nuevas funcionalidades al producto como el \emph{sign in} de la aplicación o la publicidad, entre otras.
+	\item Me ha llevado un gran proceso de búsqueda de información y aprendizaje, para poder añadir nuevas funcionalidades al producto como el \emph{sign in} de la aplicación o la publicidad, entre otras.
 	
 	\item El objetivo de los costes fue logrado. Ya que el proyecto tuvo superávit, es decir, el coste real total fue menor que los costes totales estimados. Además a futuro es probable que tengamos entrada de ingresos por parte de la publicidad o por nuevas vías.
 	
@@ -33,6 +33,7 @@ En definitiva, personalmente estoy muy contento de haber logrado todos los objet
 
 
 \section{Líneas de trabajo futuras}
+La motivación que he tenido por este proyecto, no sólo me ha permitido poder entregar un producto que creo que es bastante decente, a pesar del poco tiempo que he podido dedicarle, sino que también me ha inspirado muchas ideas y áreas de mejora que podrían incorporarse a futuras versiones de la aplicación. Como por ejemplo:
 
 \begin{itemize}
 \item La idea es que la aplicación retenga el mayor tiempo posible a los usuarios para obtener ingresos mediante la publicidad. Para ello la biblioteca de juegos tiene que seguir creciendo. 
@@ -49,7 +50,7 @@ Estos nuevos juegos, se deben de planificar en base a los anuncios, para sacar e
 
 Este kit tiene herramientas muy conocidas de Google como puede ser el reconocimiento de texto, etiquetado de las imágenes o detección de las caras, pero también se pueden añadir nuestros modelos más específicos.
 
-\item Realizar el despligue de la aplicación en la tienda de Apple \emph{App Store}, para dispositivos iOS. Y la creación de un hosting donde podamos alojar la aplicación web. Además de la revisión de algunos widgets, porque no todos tienen soporte para estos entornos.
+\item Realizar el despliegue de la aplicación en la tienda de Apple \emph{App Store}, para dispositivos iOS. Y la creación de un hosting donde podamos alojar la aplicación web. Además de la revisión de algunos widgets, porque no todos tienen soporte para estos entornos.
 	
 \item Integración y exploración de las herramientas de videojuegos como \emph{Play juegos} de Google y la de Apple con su \emph{Game Center}. Esto podría permitirnos las compras in-app.
 
