--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -5,12 +5,12 @@ En este apartado se trabaja sobre la planificación del proyecto, de tal manera 
 
 La evolución temporal es una de las partes más importantes de todo el proceso de desarrollo, ya que una mala planificación, puede hacer que el proyecto sufra retrasos, de tal manera, que no se llegue a la fecha de entrega prevista, lo que supone un coste, en este caso, el suspenso, pero también el económico, por las horas y recursos destinados a tal fin.
 
-En esta fase es muy hacer una estimación lo más precisa posible, definir quien es el encargado de hacer la tarea y el dinero que supondría hacerla. Por lo que invertir tiempo en la estimación de las horas cada una de las tareas, ayuda a identificar las irregularidades que se pueden presenta en el futuro.
+En esta fase es muy apropiado hacer una estimación lo más precisa posible, definir quien es el encargado de hacer la tarea y el dinero que supondría hacerla. Por lo que invertir tiempo en la estimación de las horas cada una de las tareas, ayuda a identificar las irregularidades que se pueden presenta en el futuro.
 
 La viabilidad pone el foco en el coste económico del proyecto como de la parte legal. Es decir, es un reactivo limitante, sobre todo el coste.
 
 \section{Planificación temporal}
-El método de trabajo para hacer el seguimiento y la planificación del mismo es \emph{Scrum}, que pretende realizar una gestión ágil del proyecto. Se basa en \emph{spints}, la duración de estos suele rondar entre los siete y quince días. Además esto depende de los requisitos del proyecto, número de integrantes y del tiempo disponible. Así se maneja esta horquilla temporal, en mi caso por la falta de tiempo, decidí hacer cada una de las iteraciones en 5 días. 
+El método de trabajo para hacer el seguimiento y la planificación del mismo es \emph{Scrum}, que pretende realizar una gestión ágil del proyecto. Se basa en \emph{sprints}, la duración de estos suele rondar entre los siete y quince días. Además esto depende de los requisitos del proyecto, número de integrantes y del tiempo disponible. Así se maneja esta horquilla temporal, en mi caso por la falta de tiempo, decidí hacer cada una de las iteraciones en 5 días. 
 
 Estos \emph{sprints} se basan en una reunión, donde se planifican todas las tareas que se pretenden realizar. En mi caso dichas reuniones eran con los tutores del trabajo de fin de grado. Además cada día se tiene que hacer el \emph{daily meetting}, pero como el proyecto es unipersonal, no es necesario. Por lo que se puede afirmar que se ha seguido la filosofía ágil.
 
