--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -12,9 +12,9 @@ La viabilidad pone el foco en el coste económico del proyecto como de la parte 
 \section{Planificación temporal}
 El método de trabajo para hacer el seguimiento y la planificación del mismo es \emph{Scrum}, que pretende realizar una gestión ágil del proyecto. Se basa en \emph{sprints}, la duración de estos suele rondar entre los siete y quince días. Además esto depende de los requisitos del proyecto, número de integrantes y del tiempo disponible. Así se maneja esta horquilla temporal, en mi caso por la falta de tiempo, decidí hacer cada una de las iteraciones en 5 días. 
 
-Estos \emph{sprints} se basan en una reunión, donde se planifican todas las tareas que se pretenden realizar. En mi caso dichas reuniones eran con los tutores del trabajo de fin de grado. Además cada día se tiene que hacer el \emph{daily meetting}, pero como el proyecto es unipersonal, no es necesario. Por lo que se puede afirmar que se ha seguido la filosofía ágil.
+Estos \emph{sprints} se basan en una reunión, donde se planifican todas las tareas que se pretenden realizar. En mi caso dichas reuniones eran con los tutores del trabajo de fin de grado. Además cada día se tiene que hacer el \emph{daily meeting}, pero como el proyecto es unipersonal, no es necesario. Por lo que se puede afirmar que se ha seguido la filosofía ágil.
 
-Aclarar que la estimación del tiempo se realiza mediante los \emph{story points}, que indican la complejidad de la tarea a realizar. Esta herramienta nos la aporta ZenHub, con la siguiente relación según el coste temporal, que podemos ver en la siguiente tabla~\ref{tabla:storypoint}
+Hay que aclarar que la estimación del tiempo se realiza mediante los \emph{story points}, que indican la complejidad de la tarea a realizar. Esta herramienta nos la aporta ZenHub, con la siguiente relación según el coste temporal, que podemos ver en la siguiente tabla~\ref{tabla:storypoint}
 
 \begin{table}[H]
 	\centering
@@ -107,7 +107,7 @@ Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/f
 
 \imagen{burndowns/sp3.png}{Sprint 3.}
 
-Al final en la reunión del cierre de este \emph{Sprint} con los tutores, quedó claro que gran parte de las tareas fueron completadas. En cuanto al tema del juego, no se pudo hacer más que la estructura del mismo, pero para la siguiente iteación del producto debería de quedar terminado.
+Al final en la reunión del cierre de este \emph{Sprint} con los tutores, quedó claro que gran parte de las tareas fueron completadas. En cuanto al tema del juego, no se pudo hacer más que la estructura del mismo, pero para la siguiente iteración del producto debería de quedar terminado.
 
 En cuanto a las horas planificadas para la documentación de la memoria, solo hice el 17\% de las 12 horas que me propuse. En gran parte fue debido a que destiné algunas horas más a otras tareas o que fui demasiado optimista a la hora de planificar.
 
@@ -125,7 +125,7 @@ Las pretensiones para este \emph{sprint} son:
 	\item Determinar cuando se produce el fin del cuatro en raya.
 	\item Test de que funciona el juego online correctamente.
 	\item Mejoras generales en el rendimiento.
-	\item Indentar y elimnar los warnings del código.
+	\item Indentar y eliminar los warnings del código.
 	\item Capacidad de mandar mensajes entre los jugadores.
 	\item Reunión con el diseñador del póster, para explicar los requisitos.
 	\item Resolución de algunos problemas.
