--- a/docs/latex/tex/C_Diseno.tex
+++ b/docs/latex/tex/C_Diseno.tex
@@ -183,7 +183,7 @@ Gran parte de los componentes o widgets de la aplicación son provistos por la c
 Para los juegos habría que testear si el diseño responsive se garantiza, ya que el diseño de los tableros está en contenedores que no son dinámicos. Lo que implica que con la gran heterogeneidad del ecosistema, encontremos fallos.
 
 \subsection{Paleta de colores}
-La paleta de colores es la ofrecida por Material Desing Palete,~\href{https://material.io/design/color/the-color-system.html#color-theme-creation}{web}. Se supone que garantiza un gran contraste para facilitar la lectura, como el reconocimiento correcto de los contornos. Como consecuencia lo dota de gran usabilidad.
+La paleta de colores es la ofrecida por Material Desing Palete,. Se supone que garantiza un gran contraste para facilitar la lectura, como el reconocimiento correcto de los contornos. Como consecuencia lo dota de gran usabilidad.
 
 En el caso que la paleta de colores no sea del agrado del usuario final, se puede meter dentro del apartado 'settings', para poner la aplicación de color negro, esto incrementa el contraste, lo que es una mejora de usabilidad.
 
