--- a/docs/latex/tex/D_Manual_programador.tex
+++ b/docs/latex/tex/D_Manual_programador.tex
@@ -74,7 +74,7 @@ Una vez realizado el paso anterior debemos de actualizar las variables de usuari
 
 Por defecto la rama de Flutter es la \emph{stable}, de las ramas disponibles: \emph{stable, beta, dev, master}. Pero si en el caso de necesitar la misma versión de Flutter, el comando necesario es:
 
-\imagen{techprog/versión}{Comando version Flutter}
+\imagen{techprog/version}{Comando version Flutter}
 
 
 \subsection{Android Studio:}
@@ -111,7 +111,7 @@ Al estar registrado con mi cuenta personal, tendría que dar permisos de adminis
 \imagen{techprog/firebase.jpg}{Firebase console}
 
 \subsection{Play Store Console:}
-La consola de \href{https://play.google.com/apps/publish/?account=9184458375980004308#AppListPlace}{Play Store} es la herramienta web que nos permite hacer el despligue de la aplicación, hacer las pruebas alfa y beta, o para subirla y que todo el mundo se la pueda descargar.
+La consola de \href{https://play.google.com/apps}{Play Store} es la herramienta web que nos permite hacer el despligue de la aplicación, hacer las pruebas alfa y beta, o para subirla y que todo el mundo se la pueda descargar.
 
 La revisión de cada una de las nuevas versiones puede tardar en ser validada, por lo que se debe tener paciencia.
 
@@ -177,7 +177,7 @@ Hay dos opciones para generar los ficheros, dependiendo del destino de cada uno 
 \section{Pruebas del sistema}
 Para validar el correcto funcionamiento del producto, se han realizado diferentes tipos de pruebas: unitarias, de integración y de sistema. Hay que destacar que Flutter tiene herramientas para la automatización de test (\emph{Appian} es una de ellas), pero debido a lo ajustado que está el proyecto, no se han realizado mediante estas, ya que no se pueden grabar los test como con \emph{Selenium}, por poner un ejemplo similar. 
 
-Es decir, se puede considerar como línea de trabajo futura, con metodologías de programación dirigida por los test, como es el caso de \empt{TDD: Test-Driven Development}.
+Es decir, se puede considerar como línea de trabajo futura, con metodologías de programación dirigida por los test, como es el caso de \empt{Test-Driven Development}.
 
 \subsection{Pruebas unitarias:}
 Se han realizado de forma simple o \emph{hardcodeando prints} en el propio código y mostrándolos por el terminal en tiempo de ejecución. En el caso de continuar con el desarrollo sería imprescindible trabajar con test automáticos. Han validado pequeños módulos o fragmentos de código, con el fin de garantizar de que estas pequeñas unidades funcionen. Uno de los ejemplos es~\ref{fig:impacto}:
